// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SingleContributionSalesforceWrites stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "AcquisitionBusToSingleContributionSalesforceWritesQueueRule2CC5A818": {
      "Properties": {
        "Description": "Send payment api events to the single-contribution-salesforce-writes-queue",
        "EventBusName": "acquisitions-bus-CODE",
        "EventPattern": {
          "account": [
            {
              "Ref": "AWS::AccountId",
            },
          ],
          "region": [
            {
              "Ref": "AWS::Region",
            },
          ],
          "source": [
            "payment-api",
          ],
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "singlecontributionsalesforcewritesqueue227D3F6D",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "deadletterssinglecontributionsalesforcewritesqueueA3CB7F4A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "dead-letters-single-contribution-salesforce-writes-queue-CODE",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "singlecontributionsalesforcewritesqueue227D3F6D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "single-contribution-salesforce-writes-queue-CODE",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadletterssinglecontributionsalesforcewritesqueueA3CB7F4A",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "singlecontributionsalesforcewritesqueuePolicyDC24ED87": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
              ],
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Fn::GetAtt": [
                      "AcquisitionBusToSingleContributionSalesforceWritesQueueRule2CC5A818",
                      "Arn",
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "singlecontributionsalesforcewritesqueue227D3F6D",
                  "Arn",
                ],
              },
            },
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Fn::GetAtt": [
                      "AcquisitionBusToSingleContributionSalesforceWritesQueueRule2CC5A818",
                      "Arn",
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "singlecontributionsalesforcewritesqueue227D3F6D",
                  "Arn",
                ],
              },
              "Sid": "Allow acquisition bus to send messages to the single-contribution-salesforce-writes-queue",
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "singlecontributionsalesforcewritesqueue227D3F6D",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
  },
}
`;

exports[`The SingleContributionSalesforceWrites stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "AcquisitionBusToSingleContributionSalesforceWritesQueueRule2CC5A818": {
      "Properties": {
        "Description": "Send payment api events to the single-contribution-salesforce-writes-queue",
        "EventBusName": "acquisitions-bus-PROD",
        "EventPattern": {
          "account": [
            {
              "Ref": "AWS::AccountId",
            },
          ],
          "region": [
            {
              "Ref": "AWS::Region",
            },
          ],
          "source": [
            "payment-api",
          ],
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "singlecontributionsalesforcewritesqueue227D3F6D",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "deadletterssinglecontributionsalesforcewritesqueueA3CB7F4A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "dead-letters-single-contribution-salesforce-writes-queue-PROD",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "singlecontributionsalesforcewritesqueue227D3F6D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "single-contribution-salesforce-writes-queue-PROD",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadletterssinglecontributionsalesforcewritesqueueA3CB7F4A",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "singlecontributionsalesforcewritesqueuePolicyDC24ED87": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
              ],
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Fn::GetAtt": [
                      "AcquisitionBusToSingleContributionSalesforceWritesQueueRule2CC5A818",
                      "Arn",
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "singlecontributionsalesforcewritesqueue227D3F6D",
                  "Arn",
                ],
              },
            },
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Fn::GetAtt": [
                      "AcquisitionBusToSingleContributionSalesforceWritesQueueRule2CC5A818",
                      "Arn",
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "singlecontributionsalesforcewritesqueue227D3F6D",
                  "Arn",
                ],
              },
              "Sid": "Allow acquisition bus to send messages to the single-contribution-salesforce-writes-queue",
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "singlecontributionsalesforcewritesqueue227D3F6D",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
  },
}
`;
